--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -11,54 +11,74 @@
 
 <head>
 <title>Shopping List</title>
-<h1 class="text-center">Shopping List</h1>
 </head>
 
 <body>
+
+	<nav class="navbar navbar-default">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="#">Shopping List</a>
+	    </div>
+	    <ul class="nav navbar-nav">
+	      <li class="active"><a href="#">Home</a></li>
+	      <li><a href="#">Page 1</a></li>
+	      <li><a href="#">Page 2</a></li>
+	      <li><a href="#">Page 3</a></li>
+	    </ul>
+	  </div>
+	</nav>
+
 	<div class="container" id="entry">
-		
-		<div class="form-group">		
-			<label for="name">Item Name</label>
-			<input type=text class="form-control" id="name"/>
-		</div>
+		<div class="panel panel-default">
+			<form class="form-inline">
+				
+				<div class="form-group">		
+					<label for="name">Item Name</label>
+					<input type=text class="form-control" id="name"/>
+				</div>
 
-		<div class="dropdown">
-			<label for="quantity">Quantity</label>
-		    <select id="quantity" value="0">
-  				<option>1</option>
-				<option>2</option>
-				<option>3</option>
-				<option>4</option>
-				<option>5</option>
-			</select>
-		</div>
+				<div class="form-group">
+					<div class="dropdown">
+						<label for="quantity">Quantity</label>
+					    <select id="quantity" value="0">
+			  				<option>1</option>
+							<option>2</option>
+							<option>3</option>
+							<option>4</option>
+							<option>5</option>
+						</select>
+					</div>
+				</div>
 
-		<div class="dropdown">
-			<label for="priority">Priority</label>
-		    <select id="priority" value="Low">
-  				<option>Low</option>
-				<option>Medium</option>
-				<option>High</option>
-			</select>
-		</div>
+				<div class="form-group">
+					<div class="dropdown">
+						<label for="priority">Priority</label>
+					    <select id="priority" value="Low">
+			  				<option>Low</option>
+							<option>Medium</option>
+							<option>High</option>
+						</select>
+					</div>
+				</div>
 
-		<div class="form-group">
-			<label for="store">Store</label>
-			<input type=text class="form-control" id="store"/>
-		</div>
+				<div class="form-group">
+					<label for="store">Store</label>
+					<input type=text class="form-control" id="store"/>
+				</div>
 
-		<div class="form-group">
-			<label for="category">Category</label>
-			<input type=text class="form-control" id="category"/>
-		</div>
+				<div class="form-group">
+					<label for="category">Category</label>
+					<input type=text class="form-control" id="category"/>
+				</div>
 
-		<div class="form-group">
-			<label for="price">Price</label>
-			<input type=text class="form-control" id="price"/>
-		</div>
-
+				<div class="form-group">
+					<label for="price">Price</label>
+					<input type=text class="form-control" id="price"/>
+				</div>
+			</form>
 			<button class="btn btn-info" onclick="clickedon()" id=add type="button">Add Item</button>
-		
+		</div>
 	</div>
 
 	<div class="container" id="list">
@@ -77,7 +97,9 @@
 		</table>
 	</div>
 
-	<script src=shoppinglist.js type=text/javascript></script>
+	<script src=model.js type=text/javascript></script>
+	<script src=view.js type=text/javascript></script>
+	<script src=controller.js type=text/javascript></script>
 
 </body>
 
