added sorting to rows and fixed timer bug

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 			<thead>
 				<tr>
 					<th></th>
-					<th>Item Name</th>
-					<th>Quantity</th>
-					<th>Store</th>
-					<th>Category</th>
-					<th>Price</th>
+					<th onclick="sortList('name')">Item Name</th>
+					<th onclick="sortList('quantity')">Quantity</th>
+					<th onclick="sortList('store')">Store</th>
+					<th onclick="sortList('category')">Category</th>
+					<th onclick="sortList('price')">Price</th>
 				</tr>
 			</thead>
 			<tbody id=listtable></tbody>
