--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 
 	<script src=model.js type=text/javascript></script>
 	<script src=view.js type=text/javascript></script>
+	<script src=savelocal.js type=text/javascript></script>
 	<script src=controller.js type=text/javascript></script>
 
 </body>
