--- a/static/index.html
+++ b/static/index.html
@@ -97,10 +97,10 @@
 		</table>
 	</div>
 
-	<script src=model.js type=text/javascript></script>
-	<script src=view.js type=text/javascript></script>
-	<script src=savelocal.js type=text/javascript></script>
-	<script src=controller.js type=text/javascript></script>
+	<script src=js/model.js type=text/javascript></script>
+	<script src=js/view.js type=text/javascript></script>
+	<script src=js/savelocal.js type=text/javascript></script>
+	<script src=js/controller.js type=text/javascript></script>
 
 </body>
 
