--- a/static/index.html
+++ b/static/index.html
@@ -31,17 +31,21 @@
 
 	<div class="container" id="entry">
 		<div class="panel panel-default">
-			<form class="form-inline">
-				
-				<div class="form-group">		
-					<label for="name">Item Name</label>
-					<input type=text class="form-control" id="name"/>
-				</div>
+			<form>
+				<div class="form-row">
+					<div class="form-group col-md-4">		
+						<label for="name">Item Name</label>
+						<input type=text class="form-control" id="name"/>
+					</div>
 
-				<div class="form-group">
-					<div class="dropdown">
+					<div class="form-group col-md-4">
+							<label for="price">Price</label>
+							<input type=text class="form-control" id="price"/>
+						</div>
+
+					<div class="form-group col-md-4">
 						<label for="quantity">Quantity</label>
-					    <select id="quantity" value="0">
+					    <select id="quantity" class="form-control" value="0">
 			  				<option>1</option>
 							<option>2</option>
 							<option>3</option>
@@ -51,10 +55,20 @@
 					</div>
 				</div>
 
-				<div class="form-group">
-					<div class="dropdown">
+				<div class="form-row">
+					<div class="form-group col-md-4">
+						<label for="store">Store</label>
+						<input type=text class="form-control" id="store"/>
+					</div>
+
+					<div class="form-group col-md-4">
+						<label for="category">Category</label>
+						<input type=text class="form-control" id="category"/>
+					</div>
+
+					<div class="form-group col-md-4">
 						<label for="priority">Priority</label>
-					    <select id="priority" value="Low">
+					    <select id="priority" class="form-control" value="Low">
 			  				<option>Low</option>
 							<option>Medium</option>
 							<option>High</option>
@@ -62,22 +76,8 @@
 					</div>
 				</div>
 
-				<div class="form-group">
-					<label for="store">Store</label>
-					<input type=text class="form-control" id="store"/>
-				</div>
-
-				<div class="form-group">
-					<label for="category">Category</label>
-					<input type=text class="form-control" id="category"/>
-				</div>
-
-				<div class="form-group">
-					<label for="price">Price</label>
-					<input type=text class="form-control" id="price"/>
-				</div>
+			<button class="btn btn-info center-block" onclick="clickedon()" id=add type="button">Add Item</button>
 			</form>
-			<button class="btn btn-info" onclick="clickedon()" id=add type="button">Add Item</button>
 		</div>
 	</div>
 
